--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,49 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  scrollbar-track-color: black;
+  
 }
 
 body {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 0.834) 0%,
+    rgba(121, 9, 116, 0.836) 41%,
+    rgba(0, 213, 255, 0.836) 100%
+  );
+  height: 
   font-size: large;
-  color: red;
+  color: rgb(4, 4, 4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .list__item {
   cursor: pointer;
   width: min-content;
+  padding: 2px 2px;
+  margin: 2px;
 }
 
-.list__item:hover{
+.list__item:hover {
   color: blueviolet;
-  text-decoration: line-through;
+}
+
+.header {
+  font-size: 60px;
+  color:black;
+  
+}
+
+#new__item-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#list {
+  background-color: darkgrey;
 }
